syntax = "proto3";
option go_package = "proto/";

service ColourGenerator {
    rpc GetRandColour (CurrentColour) returns (NewColour) {}
}

message CurrentColour {
    string colour = 1;
}

message NewColour {
    string colour = 1;
}
